helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-auth-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:548112056811:certificate/cabb02cb-db31-4374-be4f-873e9674c8ed
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
    - host: infralys.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-frontend-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mern-backend
                port:
                  number: 80
  tls:
    - hosts:
        - infralys.shop
      secretName: infralys-tls
